--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
       <h4 class="mt-4">Take notes with Express</h4>
       <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <a href="/api/notes">API Notes</a>
+      </div>
+    </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/assets/js/index.js"></script>
